--- a/.github/workflows/vault-tls.yml
+++ b/.github/workflows/vault-tls.yml
@@ -24,7 +24,7 @@ jobs:
 
     - name: Build Caddy with custom module
       run: |
-        xcaddy build --with github.com/Abzwingten/caddy-vault-tls/modules/caddy-vault-tls
+        xcaddy build --with github.com/Abzwingten/caddy/modules/caddy-vault-tls
 
     - name: Run tests
       run: go test ./modules/caddy-vault-tls/tests/
@@ -72,4 +72,4 @@ jobs:
         context: .
         file: ./Dockerfile
         push: true
-        tags: ghcr.io/Abzwingten/caddy-vault-tls:${{ github.ref_name }}
+        tags: ghcr.io/Abzwingten/caddy:${{ github.ref_name }}
