--- a/.github/workflows/vault-tls.yml
+++ b/.github/workflows/vault-tls.yml
@@ -20,6 +20,7 @@ jobs:
 
     - name: Install xcaddy
       run: |
+        go mod tidy
         go install github.com/caddyserver/xcaddy/cmd/xcaddy@latest
 
     - name: Build Caddy with custom module
